added a finished tournament tab

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -1,5 +1,5 @@
 <div class="container p-2 w-75">
-	<div class="row blinking-neon-frame d-flex">
+	<div class="row neon-frame d-flex">
 		<div class="col card ctm-card p-5 m-1">
 			<!-- <button id="cancel-login" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button> -->
 			<h2 class="text-center ctm-text-title">Your friends</h2>
