added the same carousel system to stats

--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
   <div class="greeting-page">
-      <div class="neon-frame p-3">
+      <div class="neon-frame p-0 p-md-3">
           <div class="ctm-card p-5 d-flex flex-column flex-md-row">
               <div class="col-12 col-md-6 d-flex flex-column me-md-4 mb-4 mb-md-0">
                   <h1 class="ctm-text-title d-none d-md-block">ft_transcendence</h1> <!-- Hide on mobile -->
