--- a/frontend/service/components/tournament/tournament.html
+++ b/frontend/service/components/tournament/tournament.html
@@ -1,6 +1,6 @@
 <div id="tournaments" class="neon-frame p-4">
     <div class="ctm-bg-dark card p-4 d-flex flex-column justify-content-center align-items-center">
-        <div class="switch mb-5">
+        <div class="switch switch-secondary mb-5">
             <button class="switch-btn active switch-btn-left w-50 py-2 mx-1" data-bs-target="#tournament-carousel" data-bs-slide-to="0">Ongoing</button>
             <button class="switch-btn switch-btn-right w-50 py-2 mx-1" data-bs-target="#tournament-carousel" data-bs-slide-to="1">Finished</button>
         </div>
