--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -30,7 +30,7 @@
 								<button data-action="start-game"id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start game with friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
-								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</div>
+								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing/finished Tournaments</div>
 								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Create/edit Tournament</div>
 							</div>
 						</div>
