--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -105,7 +105,7 @@
 
     <!-- Game Board Container (Hidden Initially) -->
     <div id="board-container" class="mt-4">
-        <div class="blinking-neon-frame p-3" id="neonFrame">
+        <div class="blinking-neon-frame p-0 p-md-3 p-3" id="neonFrame">
             <canvas id="board"></canvas>  <!-- Initially hidden -->
         </div>
     </div>
