--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -1,5 +1,5 @@
 <div class="container"> <!-- pendiente comprobar verticalwrapp -->
-    <section id="profile-section" class="blinking-neon-frame">
+    <section id="profile-section" class="blinking-neon-frame p-0 p-md-3">
         <div class="card ctm-card ctm-text-light">
             <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2" style="display:none;">x</button>
             <div class="card-body">
@@ -23,7 +23,7 @@
             </div>
         </div>
     </section>
-    <section id="customize-section" class="blinking-neon-frame" style="display: none;">
+    <section id="customize-section" class="blinking-neon-frame p-0 p-md-3" style="display: none;">
         <div class="card ctm-card ctm-text-light">
             <button class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
             <div class="card-body">
