--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -1,5 +1,5 @@
 <!-- registration card -->
-<div class="blinking-neon-frame">
+<div class="blinking-neon-frame p-0 p-md-3">
     <div class="card ctm-card p-5">
         <button id="cancel-signup" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
         <h2 class="text-center ctm-text-title">Register</h2>
