--- a/frontend/service/components/signup/verify-email.html
+++ b/frontend/service/components/signup/verify-email.html
@@ -1,4 +1,4 @@
-<div class="blinking-neon-frame">
+<div class="blinking-neon-frame p-0 p-md-3">
 	<div class="card ctm-card p-5">
 		<h3 class="ctm-text-title">It's dangerous to go alone!</h3>
 		<p class="ctm-text-light text-center">Take this</p>
