--- a/frontend/service/components/stats/stats.html
+++ b/frontend/service/components/stats/stats.html
@@ -1,11 +1,11 @@
 <div id="stats" class="neon-frame p-0 p-md-4 w-100 m-5">
-    <div class="ctm-bg-dark card p-4 d-flex flex-column justify-content-center align-items-center">
+    <div class="ctm-bg-dark card p-2 p-md-4 d-flex flex-column justify-content-center align-items-center">
         <div class="row d-flex w-100 mb-3">
             <div class="col text-center text-md-start">
                 <h1 class="ctm-text-title">Game Stats</h1>
             </div>
-            <div class="col text-center text-md-end">
-                <div class="switch switch-secondary ms-auto">
+            <div class="col text-center text-md-end switch-container">
+                <div class="switch switch-secondary">
                     <button class="switch-btn active switch-btn-left w-50 py-2 mx-1" data-bs-target="#stats-carousel" data-bs-slide-to="0">Pong</button>
                     <button class="switch-btn switch-btn-right w-50 py-2 mx-1" data-bs-target="#stats-carousel" data-bs-slide-to="1">Chess</button>
                 </div>
@@ -19,7 +19,7 @@
                             <!-- <h2 class="ctm-text-title text-center mb-4">Pong</h2> -->
                             <div class="row d-flex align-items-stretch">
                                 <div class="col-md-6 d-flex flex-column">
-                                    <div class="ms-4 flex-grow-1 d-flex flex-column">
+                                    <div class="ms-0 ms-md-4 flex-grow-1 d-flex flex-column">
                                         <h3 class="ctm-text-title">Quick Games</h3>
                                         <div id="pong-quick-stats" class="stats p-3 flex-grow-1"></div>
                                         <h3 class="ctm-text-title mt-4">Tournaments</h3>
@@ -42,7 +42,7 @@
                             <!-- <h2 class="ctm-text-title text-center mb-4">Chess</h2> -->
                             <div class="row d-flex align-items-stretch">
                                 <div class="col-md-6 d-flex flex-column">
-                                    <div class="ms-4 flex-grow-1 d-flex flex-column">
+                                    <div class="ms-0 ms-md-4 flex-grow-1 d-flex flex-column">
                                         <h3 class="ctm-text-title">Casual Game Stats</h3>
                                         <div id="chess-casual-stats" class="stats p-1 flex-grow-1"></div>
                                         <h3 class="ctm-text-title mt-4">Ranked Game Stats</h3>
