--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -1,4 +1,4 @@
-<section id="new-tournament-container" class="blinking-neon-frame" style="display: none;">
+<section id="new-tournament-container" class="blinking-neon-frame p-0 p-md-3" style="display: none;">
 	<div class="card ctm-card p-5 ctm-text-light">
 		<h2 class="text-center ctm-text-title">New Tournament</h2>
 		<form id="tournament-form">
@@ -25,7 +25,7 @@
 	</div>
 </div>
 </section>   
-<section id="pendant-tournament-container" class="blinking-neon-frame" style="display: none;">
+<section id="pendant-tournament-container" class="blinking-neon-frame p-0 p-md-3" style="display: none;">
 	<div class="card ctm-card p-5 ctm-text-light">
 	  <h2 class="text-center ctm-text-title">Tournament Status</h2>
 	  <h4 class="text-center ctm-text-light">Tournament name: <span id="edit-tournament-name"></span></h4>
