--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -1,4 +1,4 @@
-<div class="blinking-neon-frame">
+<div class="blinking-neon-frame p-0 p-md-3">
     <div id="login-card" class="card ctm-card p-5">
         <button id="cancel-login" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
         <h2 class="text-center ctm-text-title">Log in</h2>
