--- a/frontend/service/components/profile/styles.css
+++ b/frontend/service/components/profile/styles.css
@@ -17,8 +17,8 @@
     transform: translate(-50%, -50%);
     display: block;
     background-color: rgba(0, 0, 0, 0.5);
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     color: white;
     border: none;
