--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -1,4 +1,4 @@
-<div class="settings-container blinking-neon-frame w-75">
+<div class="settings-container blinking-neon-frame p-0 p-md-3 w-75">
     <div class="card ctm-card ctm-text-light">
         <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
         <div class=""> <!-- card-header -->
