--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -55,14 +55,14 @@
                             <div class="col-12 col-md-5 mb-2 mb-md-0 d-flex justify-content-center">
                                 <button id="choose-avatar-color" class="btn ctm-btn flex-fill py-3 d-flex align-items-center justify-content-center">
                                     Choose Avatar Color
-                                    <span id="avatar-color-square" class="color-square ms-2"></span>
+                                    <span id="avatar-color-square" class="color-square ms-auto"></span>
                                 </button>
                                 <input type="color" id="avatar-color-picker" style="display: none;">
                             </div>
                             <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center">
                                 <button id="choose-background-color" class="btn ctm-btn flex-fill py-3 d-flex align-items-center justify-content-center">
                                     Choose Background
-                                    <span id="background-color-square" class="color-square ms-2"></span>
+                                    <span id="background-color-square" class="color-square ms-auto"></span>
                                 </button>
                                 <input type="color" id="background-color-picker" style="display: none;">
                             </div>
