--- a/frontend/service/components/stats/stats.html
+++ b/frontend/service/components/stats/stats.html
@@ -1,5 +1,5 @@
 <div id="stats" class="neon-frame p-0 p-md-4 w-100 m-5">
-    <div class="ctm-bg-dark card p-2 p-md-4 d-flex flex-column justify-content-center align-items-center">
+    <div class="ctm-bg-darkish card p-2 p-md-4 d-flex flex-column justify-content-center align-items-center">
         <div class="row d-flex w-100 mb-3">
             <div class="col text-center text-md-start">
                 <h1 class="ctm-text-title">Game Stats</h1>
