--- a/frontend/service/components/tournament/styles.css
+++ b/frontend/service/components/tournament/styles.css
@@ -39,11 +39,13 @@
 
 .match {
 	display: flex;
+	flex-grow: 1;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	width: 120px;
-	height: 60px;
+	width: 100%;
+	min-height: 60px;
+	padding: 1rem;
 	border: 2px solid var(--light);
 	box-shadow: 0 0 5px var(--light);
 
