bomb chess ends now if the king explodes

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -1,6 +1,6 @@
-<div id="app-container" class="d-flex flex-column flex-md-row"> <!-- with this, side content is pushed under the chess on narrow screens -->
+<div id="app-container" class="d-flex flex-column flex-md-row mt-0"> <!-- with this, side content is pushed under the chess on narrow screens -->
   <div id="chess-container">
-    <div id="players-container" class="ms-0 row w-100 mb-5">
+    <div id="players-container" class="ms-0 row w-100 mb-2">
     
     </div>
     <div id="board-container">
