--- a/frontend/service/components/index/styles.css
+++ b/frontend/service/components/index/styles.css
@@ -31,7 +31,7 @@
     bottom: -50%;
     width: 200%;
     height: 200vh;
-    background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+    background: transparent url('https://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
     background-repeat: repeat;
     animation: white-noise 0.2s infinite;
     opacity: 1;
