--- a/frontend/service/components/friends/styles.css
+++ b/frontend/service/components/friends/styles.css
@@ -15,10 +15,10 @@
 }
 
 .friend-picture-expanded {
-    max-width: 100px;
+    max-width: 40%;
     height: auto !important;
     border-radius: 50%;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     vertical-align: middle;
 }
 
