added edit alias logic on frontend

--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -11,33 +11,33 @@
                             <button id="change-picture" class="btn">Change</button>
                         </div>
                         <h4 class="ctm-text-title mb-2">User data</h4>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Username:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Username:</span>
                             <span id="username"></span>
                         </p>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Alias:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Alias:</span>
                             <span id="alias">Patata</span>
                         </p>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Friends:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Friends:</span>
                             <span id="total-friends"></span>
                         </p>
                         <h4 class="ctm-text-title mb-2">Stats</h4>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Total Pong Matches:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Total Pong Matches:</span>
                             <span id="total-pong-matches"></span>
                         </p>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Total Chess Matches:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Total Chess Matches:</span>
                             <span id="total-chess-matches"></span>
                         </p>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Tournament Wins:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Tournament Wins:</span>
                             <span id="tournament-first"></span>
                         </p>
-                        <p class="d-flex justify-content-between fw-bold mb-1">
-                            <span>Chess Elo:</span>
+                        <p class="d-flex justify-content-between mb-1">
+                            <span class="fw-bold">Chess Elo:</span>
                             <span id="chess-elo"></span>
                         </p>
                         <div class="d-flex justify-content-center">
