fixing aria hidden boostrtap modal problem

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -2,7 +2,7 @@
     <div class="row neon-frame p-0 p-md-3 d-flex">
         <div class="col-12 col-md card ctm-card p-5 me-md-1 mb-3 mb-md-0">
             <h2 class="text-center ctm-text-title">Your friends</h2>
-            <div id="friend-list" class="h-100 flex-column">
+            <div id="friend-list" class="d-flex h-100 flex-column">
                 <div id="friends-container" class="mb-3 ctm-text-light text-center"></div>
             </div>
         </div> <!-- this closes the card -->
@@ -57,7 +57,6 @@
             </div>
         </div>
     </div>
-    
     <!-- Block Modal -->
     <div class="modal fade" id="block-modal" tabindex="-1" aria-labelledby="block-modal-label" aria-hidden="true">
         <div class="modal-dialog">
