added fancy stuff

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -106,7 +106,9 @@
     <!-- Game Board Container (Hidden Initially) -->
     <div id="board-container" class="mt-4">
         <div class="blinking-neon-frame p-0 p-md-3 p-3" id="neonFrame">
-            <canvas id="board"></canvas>  <!-- Initially hidden -->
+            <div class="card fancy p-2 p-md-5">
+                <canvas id="board"></canvas>  <!-- Initially hidden -->
+            </div>
         </div>
     </div>
 
