--- a/frontend/service/components/stats/stats.html
+++ b/frontend/service/components/stats/stats.html
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="col-md-6 d-flex flex-column">
                                     <h3 class="ctm-text-title text-center">Full History</h3>
-                                    <div id="full-pong-history" class="history text-center flex-grow-1 d-flex flex-column">
+                                    <div id="full-pong-history" class="fancy history text-center flex-grow-1 d-flex flex-column">
                                         <!-- Pong history will be populated here -->
                                     </div>
                                 </div>
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="col-md-6 d-flex flex-column">
                                     <h3 class="ctm-text-title text-center">Full History</h3>
-                                    <div id="full-chess-history" class="history flex-grow-1 d-flex flex-column">
+                                    <div id="full-chess-history" class="fancy history flex-grow-1 d-flex flex-column">
                                         <!-- Chess history will be populated here -->
                                     </div>
                                 </div>
